Bug 226600 - Add a print preview flag to *nix print device context specs. r=blizzard, sr=roc