gfx/src/xlib/nsDeviceContextSpecFactoryX.cpp
@@ -67,7 +67,8 @@ NS_IMETHODIMP nsDeviceContextSpecFactoryXlib::CreateDeviceContextSpec(nsIWidget 
   nsCOMPtr<nsIDeviceContextSpec> devSpec = do_CreateInstance(kDeviceContextSpecCID, &rv);
   if (NS_SUCCEEDED(rv))
   {
-    rv = ((nsDeviceContextSpecXlib *)devSpec.get())->Init(aPrintSettings);
+    rv = ((nsDeviceContextSpecXlib *)devSpec.get())->
+      Init(aPrintSettings, aIsPrintPreview);
     if (NS_SUCCEEDED(rv))
     {
       aNewSpec = devSpec;
